sis_sources/tests/errors/null_falsy.sis
pin x;
if (x) { print("not null"); } else { print("was null"); }
